--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
+  transparent_image: ^2.0.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
